Action section added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,27 @@
 <!-- Main start -->
     <main>
 
+        <!-- Action section start -->
+         <section class="action-section">
+            <!-- div 1 -->
+            <div>
+                <h3 class="action-title">
+                    See It in Action
+                </h3>
+                <p class="action-description">
+                    Explore the live preview and imagine your <br> brand in this bold new look.
+                </p>
+                <button class="primary-btn raleway">
+                    Launch Live Preview
+                </button>
+            </div>
+
+            <!-- div 2 -->
+            <div>
+                <img class="action-img" src="/Assets/wc-mini.png" alt="">
+            </div>
+         </section>
+        <!-- Action section end -->
     </main>
 <!-- Main end -->
 
