--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 
 <!-- Main start -->
-    <main>
+    <main class="raleway">
 
         <!-- Action section start -->
          <section class="action-section">
@@ -64,6 +64,45 @@
             </div>
          </section>
         <!-- Action section end -->
+
+        <!-- user section start -->
+         <section class="user-section">
+            <h3 class="user-title raleway">
+                Joined Thousands of Productive Users
+            </h3>
+
+            <div class="user-container">
+
+                <div>
+                    <h2 class="user-container-title">
+                        50K
+                    </h2>
+                    <p class="user-container-description">
+                        Active Users
+                    </p>
+                </div>
+
+                <div>
+                    <h2 class="user-container-title">
+                        2M 
+                    </h2>
+                    <p class="user-container-description">
+                        Focus Sessions
+                    </p>
+                </div>
+
+                <div>
+                    <h2 class="user-container-title">
+                        95%
+                    </h2>
+                    <p class="user-container-description">
+                        Satisfaction Rate
+                    </p>
+                </div>
+
+            </div>
+         </section>
+        <!-- user section end -->
     </main>
 <!-- Main end -->
 
