users revier added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 <!-- Font Link -->
+ <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/474dce99b5.js" crossorigin="anonymous"></script>
+ <!-- Font Awesome -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -103,6 +106,109 @@
             </div>
          </section>
         <!-- user section end -->
+
+
+        <!-- review section start -->
+         <section class="review-section">
+            <h3 class="review-title raleway">
+                What our Users Say
+            </h3>
+
+            <div class="review-boss-container">
+                <!-- Div 1 -->
+            <div class="review-container">
+                <span class="review-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+
+                <h4 class="review-container-title"> 
+                    Loved by designers
+                </h4>
+                <p class="review-container-description">
+                    This  template's interface is simple to use, the design is clear and friendly. The concept is detailed, precise and seems accurate.
+                </p>
+
+                <div class="reviewer-cointainer">
+                    <img class="reviewer-img" src="Assets/avatar.png" alt="">
+                    <div class="reviewer-address">
+                        <h4 class="reviewer-name">
+                            Reviewer Name: 
+                        </h4>
+                        <h4 class="reviewer-date">
+                            Date:
+                        </h4>
+                    </div>
+                </div>
+            </div>
+
+        <!-- Div 2 -->
+            <div class="review-container">
+                <span class="review-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+
+                <h4 class="review-container-title"> 
+                    Loved by designers
+                </h4>
+                <p class="review-container-description">
+                    This  template's interface is simple to use, the design is clear and friendly. The concept is detailed, precise and seems accurate.
+                </p>
+
+                <div class="reviewer-cointainer">
+                    <img class="reviewer-img" src="Assets/avatar.png" alt="">
+                    <div class="reviewer-address">
+                        <h4 class="reviewer-name">
+                            Reviewer Name: 
+                        </h4>
+                        <h4 class="reviewer-date">
+                            Date:
+                        </h4>
+                    </div>
+                </div>
+            </div>
+
+        <!-- Div 3 -->
+            <div class="review-container">
+                <span class="review-star">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                </span>
+
+                <h4 class="review-container-title"> 
+                    Loved by designers
+                </h4>
+                <p class="review-container-description">
+                    This  template's interface is simple to use, the design is clear and friendly. The concept is detailed, precise and seems accurate.
+                </p>
+
+                <div class="reviewer-cointainer">
+                    <img class="reviewer-img" src="Assets/avatar.png" alt="">
+                    <div class="reviewer-address">
+                        <h4 class="reviewer-name">
+                            Reviewer Name: 
+                        </h4>
+                        <h4 class="reviewer-date">
+                            Date:
+                        </h4>
+                    </div>
+                </div>
+            </div>
+
+            </div>
+
+         </section>
+        <!-- review section end -->
     </main>
 <!-- Main end -->
 
