focus section added

--- a/index.html
+++ b/index.html
@@ -209,6 +209,22 @@
 
          </section>
         <!-- review section end -->
+
+        <!-- Focus section start -->
+         <section class="Focus-section">
+            <h2 class="Focus-title">
+                Ready to Focus Better
+            </h2>
+            <p class="Focus-description">
+                We are presenting the best Webflow ever.
+            </p>
+            <button class="primary-btn focus-btn">
+                Get Started Free
+            </button>
+            <br>
+            <img class="Focus-img" src="Assets/wc-big.png" alt="">
+         </section>
+        <!-- Focus section end -->
     </main>
 <!-- Main end -->
 
