form section added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
  <!-- Font Awesome -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body">
 <!-- header start -->
     <header>
         <nav class="banner">
@@ -225,6 +225,33 @@
             <img class="Focus-img" src="Assets/wc-big.png" alt="">
          </section>
         <!-- Focus section end -->
+
+        <!-- Form section start -->
+         <section class="form-section">
+            <div class="form-container-1">
+                <h2 class="form-title">
+                     Let's Get in <br> Touch
+                </h2>
+            </div>
+
+            <div class="form-container-2">
+                <form action="">
+                    <label class="form-label" for="email">Email</label>
+                    <input class="form-input" type="email" placeholder="example@email.com" name="" id="">
+
+                    <label class="form-label" for="name">Name</label>
+                    <input class="form-input" type="text" placeholder="Full Name" name="" id="">
+
+                    <label class="form-label" for="message">Message</label>
+                    <textarea class="form-area" name="message" cols="24" rows="5" placeholder="Write Your Message..." id=""></textarea>
+                </form>
+                <button class="primary-btn form-btn">
+                    Get in Touch
+                </button>
+            </div>
+
+         </section>
+        <!-- Form section end -->
     </main>
 <!-- Main end -->
 
