--- a/index.html
+++ b/index.html
@@ -259,7 +259,22 @@
 
 <!-- Footer start -->
     <footer>
-
+        <section class="footer">
+            <div class="footer-div-1">
+            <h3 class="banner-nav-title-1 open-sans footer-div-1-title">
+                    LOGO
+            </h3>
+            <p class="footer-div-1-des">
+                Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.
+            </p>
+        </div> 
+        <div class="footer-div-2">
+            <a href="https://web.programming-hero.com/dashboard" target="_blank">Home</a>
+            <a href="https://web.programming-hero.com/course-details" target="_blank">About</a>
+            <a href="https://www.google.com/" target="_blank">How it Works</a>
+            <a href="https://helpdesk.programming-hero.com/" target="_blank">Services</a>
+        </div>
+        </section>
     </footer>
 <!-- Footer end -->
 
