--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <!-- div 2 -->
             <div>
-                <img class="action-img" src="/Assets/wc-mini.png" alt="">
+                <img class="action-img" src="./Assets/wc-mini.png" alt="">
             </div>
          </section>
         <!-- Action section end -->
