new website name added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <!-- Div 1 -->
             <div class="banner-nav">
                 <h3 class="banner-nav-title-1 open-sans">
-                    LOGO
+                    NEXORA
                 </h3>
                 <button class="primary-btn raleway">
                     Sign Up
@@ -264,7 +264,7 @@
         <section class="footer">
             <div class="footer-div-1">
             <h3 class="banner-nav-title-1 open-sans footer-div-1-title">
-                    LOGO
+                    NEXORA
             </h3>
             <p class="footer-div-1-des">
                 Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.
